[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/fonts/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://nodes/BeltSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/TestFontTree.tres" type="DynamicFont" id=3]
[ext_resource path="res://nodes/UpgradePopup.gd" type="Script" id=4]
[ext_resource path="res://assets/backgrounds/mapcut.jpg" type="Texture" id=5]
[ext_resource path="res://assets/armies/arm_gun.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/lifebar.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/bg_army.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/red_line.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/itemsbar.png" type="Texture" id=10]

[sub_resource type="Shader" id=5]
resource_local_to_scene = true
code = "shader_type canvas_item;
render_mode blend_add;
uniform sampler2D noise;
uniform sampler2D noise2;
uniform float brightness = 2.5;
uniform float time_scale = 1.0;
void fragment() {
	float PI = 3.1415;
	vec2 cc_uv = UV - vec2(.5); 
	float angle = atan(cc_uv.y, cc_uv.x) / PI + 1.;
	float p = sqrt(dot(cc_uv, cc_uv)); 
	vec2 puv = vec2(p, angle * .5);
	vec2 uv = puv * 2.;
	float time = TIME * time_scale;
	vec4 old_colo = COLOR;
	COLOR = vec4(.0);
	for(int i = 1; i <= 5; i++){
		float intensive = .1 + .07 * float(i);
		vec2 offset = (texture(noise, vec2(time*.35*(.5+fract(sin(float(i)*55.))), angle)).rg - vec2(.5)) * intensive; 
		vec2 uuv = uv + offset;
		float dist = abs(uuv.x - .5);
		float rand_speed = .2 + .05 * fract(cos(float(i)*1144.));
		float gone = smoothstep(.1 + 0.05 * (float(i) - .5), 1.0, texture(noise2, uv + vec2(time*rand_speed)).g);
		COLOR += gone * old_colo / dist * .01 * texture(noise2, uuv + vec2(time)).g;
	}
	vec4 light = old_colo * smoothstep(1.0, -2.0, abs(uv.x - .5) * 2.0) * texture(noise2, uv).a; 
	COLOR += light * brightness;  
}
 "

[sub_resource type="OpenSimplexNoise" id=9]

[sub_resource type="NoiseTexture" id=7]
noise = SubResource( 9 )

[sub_resource type="OpenSimplexNoise" id=10]

[sub_resource type="NoiseTexture" id=8]
noise = SubResource( 10 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 5 )
shader_param/brightness = 0.7
shader_param/time_scale = 0.1
shader_param/noise = SubResource( 7 )
shader_param/noise2 = SubResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 38
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 41
outline_size = 3
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 3
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 42
outline_size = 7
outline_color = Color( 0.203922, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 40
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.145098, 1 )
font_data = ExtResource( 1 )

[node name="UpgradePopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -770, -194 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0, 0, 0.784314 )

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -800.0
margin_top = -220.0
margin_right = 800.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -800.0
margin_right = 800.0
margin_bottom = 220.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="bg2" type="TextureRect" parent="."]
margin_left = 87.0
margin_top = 89.0
margin_right = 888.0
margin_bottom = 466.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="BG2" type="TextureRect" parent="bg2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 916.0
margin_top = 122.0
margin_right = 1164.0
margin_bottom = 345.0
rect_rotation = 90.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true

[node name="l1" type="TextureRect" parent="bg2"]
margin_left = 116.0
margin_top = 114.0
margin_right = 696.0
margin_bottom = 116.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="bg2"]
modulate = Color( 0.92549, 0, 0, 1 )
material = SubResource( 13 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 541.5
margin_top = -101.5
margin_right = 852.5
margin_bottom = 183.5
rect_rotation = 89.9999
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -929.0
margin_top = 106.0
margin_right = -21.0
margin_bottom = 217.0
custom_colors/font_color = Color( 0.792157, 0.733333, 0.733333, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 1 )
text = "Final de Oleada!"
align = 1
valign = 1
autowrap = true

[node name="Label_subtext" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -760.0
margin_top = -311.0
margin_right = -168.0
margin_bottom = -134.0
custom_colors/font_color = Color( 0.584314, 0.584314, 0.584314, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 15 )
text = "Elige un espacio de tu cinturar para colocar tu arma nueva, si el que eliges ya está ocupado será reemplazado."
valign = 1
autowrap = true

[node name="NewArmySlot" parent="." instance=ExtResource( 2 )]
margin_left = 827.0
margin_top = 252.0
margin_right = 957.0
margin_bottom = 412.0

[node name="NewArmyPanel" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -786.0
margin_top = 248.0
margin_right = -174.0
margin_bottom = 437.0

[node name="TextureRect3" type="TextureRect" parent="NewArmyPanel"]
modulate = Color( 0.92549, 0, 0, 1 )
material = SubResource( 13 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 142.0
margin_top = -157.5
margin_right = 453.0
margin_bottom = 127.5
rect_rotation = 89.9999
texture = ExtResource( 5 )
expand = true

[node name="Sprite" type="Sprite" parent="NewArmyPanel"]
position = Vector2( 305, 94 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="lb_amount" type="Label" parent="NewArmyPanel"]
margin_left = 278.0
margin_top = 123.0
margin_right = 358.0
margin_bottom = 175.0
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 3 )
text = "x3"
align = 2
valign = 1
autowrap = true

[node name="lb_desc" type="Label" parent="NewArmyPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 87.0
margin_top = -60.5
margin_right = 711.0
margin_bottom = 83.5
custom_colors/font_color = Color( 0.843137, 0.843137, 0.843137, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 6 )
text = "Escopeta, largo alcance, causa 2 daños al primer enemigo incluso si esta volando, además causa 1 daño a los"
valign = 1
autowrap = true

[node name="lb_name" type="Label" parent="NewArmyPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -112.0
margin_right = 156.0
margin_bottom = -64.0
custom_colors/font_color = Color( 1, 0.764706, 0.764706, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 12 )
text = "RESPIRO"
align = 1
valign = 1
autowrap = true

[node name="bg" type="TextureRect" parent="."]
margin_left = 269.0
margin_top = 651.0
margin_right = 1070.0
margin_bottom = 1028.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="bg2" type="TextureRect" parent="bg"]
margin_left = 616.0
margin_right = 1417.0
margin_bottom = 377.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -525.0
margin_top = 224.0
margin_right = 525.0
margin_bottom = 384.0
custom_constants/separation = 100
alignment = 1

[node name="BeltSlot1" parent="HBox" instance=ExtResource( 2 )]
margin_bottom = 160.0

[node name="BeltSlot2" parent="HBox" instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 360.0
margin_bottom = 160.0

[node name="BeltSlot3" parent="HBox" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 590.0
margin_bottom = 160.0

[node name="BeltSlot4" parent="HBox" instance=ExtResource( 2 )]
margin_left = 690.0
margin_right = 820.0
margin_bottom = 160.0

[node name="BeltSlot5" parent="HBox" instance=ExtResource( 2 )]
margin_left = 920.0
margin_right = 1050.0
margin_bottom = 160.0

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -867.0
margin_top = -97.0
margin_right = -507.0
margin_bottom = -14.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect3" type="TextureRect" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Button"]
modulate = Color( 0.529412, 0.105882, 0.0862745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.764706, 0.764706, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 14 )
text = "No la necesito"
align = 1
valign = 1
autowrap = true

[node name="block" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
color = Color( 0.00784314, 0, 1, 0.027451 )
